--- a/index.html
+++ b/index.html
@@ -8,14 +8,10 @@
   box-sizing: border-box;
 }
 
-html{
-  min-height: 100%;
-  overflow: hidden;
-}
 body{
   height: calc(100vh - 8em);
   padding: 380px;
-  color: rgba(243, 4, 4, 0.836);
+  color: rgb(255, 255, 255);
   font-family: 'Anonymous Pro', monospace;  
   background-color: rgb(0, 0, 0);  
 }
@@ -24,7 +20,7 @@ body{
     top: 50%;  
     width: 24em;
     margin: 0 auto;
-    border-right: 2px solid rgba(255,255,255,.75);
+    border-right: 2px solid rgb(255, 255, 255);
     font-size: 180%;
     text-align: center;
     white-space: nowrap;
@@ -38,10 +34,10 @@ body{
 }
 @keyframes typewriter{
   from{width: 0;}
-  to{width: 8em;}
+  to{width: 9.5em;}
 }
 @keyframes blinkTextCursor{
-  from{border-right-color: rgba(255,255,255,.75);}
+  from{border-right-color: rgb(255, 255, 255);}
   to{border-right-color: transparent;}
 }
 
@@ -51,30 +47,25 @@ body{
     
 .navbar {
   overflow: hidden;
-    background-color: #333;
+    background-color: rgb(255, 0, 0);
 }
 
 .navbar a {
-  float: left;
   display: block;
-  color: white;
+  color: rgb(255, 255, 255);
   text-align: center;
   padding: 14px 20px;
   text-decoration: none;
-}
-
-.navbar a.right {
-  float: right;
 }
 
 </style>
 
   <body>
     <div class="body">
-      <p class="line-1 anim-typewriter">ON DEVELOPMENT</p>
+      <p class="line-1 anim-typewriter">On Development...</p>
   </div>
   <div class="navbar">
-    <a href="https://discord.gg/YAFGAaMrTC">Discord</a>
+    <a href="https://discord.gg/YAFGAaMrTC">TAP HERE</a>
   </div>
   </body>
 </html>
