--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <head>
             <meta name="viewport" content="width=device-width, initial-scale=1">
             <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo:400,700">
-            <title>Root</title>
+            <title>jnsougata.io</title>
             <style>
                 *{
                     margin: 0px;
