--- a/index.html
+++ b/index.html
@@ -160,8 +160,12 @@
   </head>
   <body>
     <section class="blue">
+      <img src="https://photos.app.goo.gl/2ToatSPgANbpDfL57" width="460" height="345">
       <h1>Sougata Jana</h1>
-      <p>A website is like a road. The more curves it has the more interesting it is.</p>
+      <p style="z-index: 1">
+        I describe myself as a student who loves coding, open source, and the software design.
+        <br>I like to create and contribute to open source projects, helps me to learn a ton of new stuff.
+      </p>
       <div class="curve"></div>
     </section>
 
