--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       h1 {
         font-size: 4rem;
       }
+      img {
+        border-radius: 50%;
+        border: 5px solid white;
+      }
       p {
         font-size: 1.5rem;
       }
@@ -160,7 +164,7 @@
   </head>
   <body>
     <section class="blue">
-      <img src="https://photos.app.goo.gl/2ToatSPgANbpDfL57" width="460" height="345">
+      <img src="https://raw.githubusercontent.com/jnsougata/jnsougata.github.io/main/assets/dp.jpg" style="width:200px">
       <h1>Sougata Jana</h1>
       <p style="z-index: 1">
         I describe myself as a student who loves coding, open source, and the software design.
@@ -169,48 +173,12 @@
       <div class="curve"></div>
     </section>
 
-    <section>
-      <h1>Nice Curves!</h1>
-      <p>A website is like a road. The more curves it has the more interesting it is.</p>
-    </section>
-
-    <section class="bubble">
-      <h1>Nice Curves!</h1>
-      <p>A website is like a road. The more curves it has the more interesting it is.</p>
-    </section>
-
-    <section class="dark">
-      <h1>Nice Curves!</h1>
-      <p>A website is like a road. The more curves it has the more interesting it is.</p>
-    </section>
-
-    <section class="red">
-      <h1>Nice Curves!</h1>
-      <p>A website is like a road. The more curves it has the more interesting it is.</p>
-
-      <div class="wave">
-        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-          <path
-            d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
-            class="shape-fill"
-          ></path>
-        </svg>
-      </div>
-    </section>
-
     <div class="spacer layer1"></div>
-
-    <section>
-      <h1>Nice Curves!</h1>
-      <p>A website is like a road. The more curves it has the more interesting it is.</p>
-    </section>
-
-    <div class="spacer layer2 flip"></div>
 
     <section class="pink">
       <div class="blob-content">
-        <h1>Nice Curves!</h1>
-        <p>A website is like a road. The more curves it has the more interesting it is.</p>
+        <h1>SHA-1011 Coming Soon</h1>
+        <p>1011-bit Secure Hash Algorithm</p>
       </div>
 
       <svg
@@ -246,13 +214,6 @@
           { repeat: 999, duration: 3000, yoyo: true }
         ).start();
       </script>
-    </section>
-
-    <div class="spacer layer2"></div>
-
-    <section class="blobs">
-      <h1>Nice Curves!</h1>
-      <p>A website is like a road. The more curves it has the more interesting it is.</p>
     </section>
   </body>
 </html>
