--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         opacity: 0.5;
       }
 
+      textarea {
+        width: 100%;
+        height:200px;
+        padding: 12px 20px;
+        margin: 8px 0;
+        box-sizing: border-box;
+        border: none;
+        border-radius: 15px;
+        background-color: black;
+        color: white;
+        opacity: 0.5;
+      }
+
       button {
         margin-top: 10px;
         background-color: red;
@@ -225,10 +238,15 @@
             Http.open("GET", url, true);
             Http.send();
             Http.onreadystatechange = (e) => {
+              let output_field = document.getElementById("output_text");
+              output_field.value = Http.responseText;
               console.log(Http.responseText)
               }
           }
       </script>
+      <form>
+        <textarea name="text" id="output_text" rows="14" cols="10" wrap="soft"> </textarea>
+      </form>
 
       </div>
 
