--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
     <section class="pink">
       <div class="blob-content">
-        <h1>SHA1011</h1>
+        <h1>SHA1011 Hash Generator</h1>
         <form>
           <input type="text" id="input_text" name="ip_txt" value="" placeholder="type here...">
         </form>
