--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         box-sizing: border-box;
         border: none;
         border-radius: 15px;
-        background-color: black;
-        color: white;
-        opacity: 0.5;
+        background-color: white;
+        color: black;
+        opacity: 1.0;
       }
 
       textarea {
@@ -39,15 +39,17 @@
         margin: 8px 0;
         box-sizing: border-box;
         border: none;
+        box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
         border-radius: 15px;
-        background-color: black;
-        color: white;
-        opacity: 0.5;
+        background-color: transparent;
+        color: black;
+        opacity: 1;
       }
 
       button {
         margin-top: 10px;
-        background-color: red;
+        margin-bottom: 10px;
+        background-color: #4CAF50;
         border: none;
         color: white;
         padding: 8px 16px;
@@ -233,11 +235,13 @@
 
     <section class="pink">
       <div class="blob-content" style="margin: 10px">
-        <h1 style="z-index: 1; align: center; margin: 20px">SHA1011 Hash Generator</h1>
+        <h1 style="align: center; margin: 20px">SHA1011 Hash Generator</h1>
         <form>
-          <input type="text" id="input_text" name="ip_txt" value="" placeholder="type here...">
+          <input type="text" id="input_text" name="ip_txt" value="" placeholder="paste here...">
         </form>
-        <button onclick="getHashValue()"><span>Generate</span></button>
+        <div style = "display: flex; justify-content:flex-end">
+          <button onclick="getHashValue()"><span>Generate</span></button>
+        </div>
         <script>
           function getHashValue() {
             let Http = new XMLHttpRequest();
@@ -252,7 +256,7 @@
           }
         </script>
       <form>
-        <textarea name="text" id="output_text" rows="14" cols="10" wrap="soft"> </textarea>
+        <textarea name="text" id="output_text" rows="10" cols="10" wrap="soft" readonly> </textarea>
       </form>
       </div>
       <svg
