--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
         cursor: pointer;
         display: inline-block;
         position: relative;
-        transition: 0.5s;
       }
 
       p {
@@ -292,6 +291,21 @@
           { repeat: 999, duration: 3000, yoyo: true }
         ).start();
       </script>
+    </section>
+
+    <div class="spacer layer1" style="background-color: #0f0f10"></div>
+
+    <section class="red">
+      <h1>:D</h1>
+
+      <div class="wave">
+        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+          <path
+            d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+            class="shape-fill"
+          ></path>
+        </svg>
+      </div>
     </section>
 
   </body>
