--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
   </head>
   <body>
     <section class="blue">
-      <img src="https://raw.githubusercontent.com/jnsougata/jnsougata.github.io/main/assets/dp.jpg" style="width:200px">
+      <a href="rozy.html"><img src="https://raw.githubusercontent.com/jnsougata/jnsougata.github.io/main/assets/dp.jpg" style="width:200px"></a>
       <h1 style="z-index: 1; text-align: center; margin: 10px">Sougata Jana</h1>
       <p style="z-index: 1; text-align: center; margin: 20px">
         I describe myself as a student who loves coding, open source, and the software design.
