--- a/rozy.html
+++ b/rozy.html
@@ -18,12 +18,11 @@
             background-attachment: fixed;
             background-position: center;
             font-family: 'Prompt', sans-serif;
-
         }
     </style>
 
     <body>
-        <h1 style="text-align: center; color: red">3AM & Rozy</h1>
+        <h1 style="text-align: center; color: red; font-family: Courier;">3AM & Rozy</h1>
         <div style="text-align: center">
             <h3>I like you a lot. You know that, right?
                 <br>I can’t pretend to know how you feel, but I do know how strong you are.
