--- a/auth.html
+++ b/auth.html
@@ -133,7 +133,7 @@
   <body>
     <section class="blue">
         <h1 style="align: center; margin: 20px">Password</h1>
-        <form style="width: 500px; z-index: 100">
+        <form style="width: 80%; z-index: 100">
           <input type="password" id="password" name="pass_field" value="">
         </form>
         <div style = "display: flex; justify-content:flex-end">
