--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
     <section class="pink">
       <div class="blob-content" style="margin: 10px">
         <h1 style="align: center; margin: 20px">SHA1011</h1>
-        <form style="width: 500px">
+        <form style="width: 100%">
           <input type="text" id="input_text" name="ip_txt" value="" placeholder="paste here...">
         </form>
         <div style = "display: flex; justify-content:flex-end">
@@ -252,7 +252,7 @@
             Http.onreadystatechange = (e) => {
               let output_field = document.getElementById("output_text");
               output_field.value = Http.responseText;
-              }
+            }
           }
         </script>
       <form>
@@ -283,7 +283,6 @@
           ></path>
         </g>
       </svg>
-
       <script>
         const tween = KUTE.fromTo(
           '#blob1',
