--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <body>
     <main class="container">
-        <h1>All Of My Projects</h1>
-        <small>Some useful, some stupid, all fun!</small>
+        <h1>Projects</h1>
+        <small>....</small>
         <section class="intro">
             <div class="user-info"></div>
         </section>
