--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>jnsougata</title>
-    <link rel="icon" type="image/x-icon" href="./profile.png">
-    <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="stylesheet" type="text/css" href="/styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
     <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@100;400;900&amp;display=swap" rel="stylesheet">
@@ -15,7 +14,7 @@
   <body>
     <div class="container">
       <div class="avatar">
-        <img src="./avatar.png" alt="avatar" />
+        <img src="https://avatars.githubusercontent.com/u/53375272?v=4" alt="avatar" />
       </div>
       <div class="name">
         <p>S</p>
@@ -43,6 +42,6 @@
         <p id="twitter"><i class="fa-brands fa-twitter" style="color: rgb(56, 131, 192)"></i> @jnsougata</p>
       </div>
     </div>
-    <script src="./index.js"></script>
+    <script src="/scripts/index.js"></script>
   </body>
 </html>
