--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <p id="fire"><i class="fa-solid fa-fire" style="color: rgb(233, 42, 42)"></i></p>
       </div>
       <div class="socials">
-        <p id="discord"><i class="fa-brands fa-discord" style="color: rgb(48, 117, 245)"></i> @iamsougata</p>
-        <p id="twitter"><i class="fa-brands fa-twitter" style="color: rgb(56, 131, 192)"></i> @jnsougata</p>
+        <p id="discord"><i class="fa-brands fa-discord" style="color: rgb(48, 117, 245)"></i>@jnsougata</p>
+        <p id="twitter"><i class="fa-brands fa-twitter" style="color: rgb(56, 131, 192)"></i>@jnsougata</p>
       </div>
     </div>
     <script src="/scripts/index.js"></script>
