Update links and styles in index.html

--- a/index.html
+++ b/index.html
@@ -17,31 +17,46 @@
         <img src="https://avatars.githubusercontent.com/u/53375272?v=4" alt="avatar" />
       </div>
       <div class="name">
-        <p>S</p>
-        <p>O</p>
-        <p>U</p>
-        <p id="github"><i class="fa-brands fa-github"></i></p>
-        <p>A</p>
-        <p>T</p>
-        <p>A</p>
+        <a>S</a>
+        <a>O</a>
+        <a>U</a>
+        <a href="https://github.com/jnsougata" target="_blank"><i class="fa-brands fa-github"></i></a>
+        <a>A</a>
+        <a>T</a>
+        <a>A</a>
       </div>
       <div class="about">
         <p>I describe myself as a student who loves coding, open source, and the software design.</p>
         <p>I like to create and contribute to open source projects, helps me to learn a ton of new stuff.</p>
       </div>
       <div class="projects">
-        <p id="go"><i class="fa-brands fa-golang" style="color: rgb(134, 134, 240)"></i></p>
-        <p id="rust"><i class="fa-brands fa-rust" style="color: rgb(230, 78, 18)"></i></p>
-        <p id="python"><i class="fa-brands fa-python" style="color: rgb(8, 92, 160)"></i></p>
-        <p id="js"><i class="fa-brands fa-square-js" style="color: rgb(255, 204, 0)"></i></p>
-        <p id="unity"><i class="fa-brands fa-unity" style="color: rgb(100, 77, 88)"></i></p>
-        <p id="fire"><i class="fa-solid fa-fire" style="color: rgb(233, 42, 42)"></i></p>
+        <a href="https://go.dev/" target="_blank">
+          <i class="fa-brands fa-golang" style="color: rgb(134, 134, 240)"></i>
+        </a>
+        <a href="https://www.rust-lang.org/" target="_blank">
+          <i class="fa-brands fa-rust" style="color: rgb(230, 78, 18)"></i>
+        </a>
+        <a href="https://www.python.org/" target="_blank">
+          <i class="fa-brands fa-python" style="color: rgb(8, 92, 160)"></i>
+        </a>
+        <a href="https://www.javascript.com/" target="_blank">
+          <i class="fa-brands fa-square-js" style="color: rgb(255, 204, 0)"></i>
+        </a>
+        <a href="https://unity.com/" target="_blank">
+          <i class="fa-brands fa-unity" style="color: rgb(100, 77, 88)"></i>
+        </a>
+        <a href="https://aiotube.deta.dev" target="_blank">
+          <i class="fa-solid fa-fire" style="color: rgb(233, 42, 42)"></i>
+        </a>
       </div>
       <div class="socials">
-        <p id="discord"><i class="fa-brands fa-discord" style="color: rgb(48, 117, 245)"></i>@jnsougata</p>
-        <p id="twitter"><i class="fa-brands fa-twitter" style="color: rgb(56, 131, 192)"></i>@jnsougata</p>
-      </div>
+        <a href="https://www.linkedin.com/in/jnsougata" target="_blank">
+          <i class="fa-brands fa-linkedin" style="color: rgb(48, 117, 245)">
+          </i>@jnsougata
+        </a>
+        <a href="https://discordapp.com/users/516649677001719819" target="_blank">
+          <i class="fa-brands fa-discord" style="color: rgb(6, 87, 236)"></i>@jnsougata</p>
+        </a>
     </div>
-    <script src="/scripts/index.js"></script>
   </body>
 </html>
