--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
         <a href="https://discordapp.com/users/516649677001719819" target="_blank">
           <i class="fa-brands fa-discord" style="color: rgb(6, 87, 236)"></i>@jnsougata</p>
         </a>
+         <a href="https://drive.google.com/file/d/10d7GbtyiNSnTinpSzQ-EjbLDBtSSGaFu/view?usp=sharing" target="_blank">
+          <i class="fa-brands fa-file-arrow-down" style="color: rgb(6, 87, 236)"></i>Resume</p>
+        </a>
     </div>
   </body>
 </html>
