--- a/index.html
+++ b/index.html
@@ -52,14 +52,13 @@
       </div>
       <div class="socials">
         <a href="https://www.linkedin.com/in/jnsougata" target="_blank">
-          <i class="fa-brands fa-linkedin" style="color: rgb(48, 117, 245)">
-          </i>@jnsougata
+          <i class="fa-brands fa-linkedin" style="color: rgb(48, 117, 245)"></i>@jnsougata
         </a>
         <a href="https://discordapp.com/users/516649677001719819" target="_blank">
-          <i class="fa-brands fa-discord" style="color: rgb(6, 87, 236)"></i>@jnsougata</p>
+          <i class="fa-brands fa-discord" style="color: rgb(6, 87, 236)"></i>@jnsougata
         </a>
-         <a href="https://drive.google.com/file/d/10d7GbtyiNSnTinpSzQ-EjbLDBtSSGaFu/view?usp=sharing" target="_blank"
-          <i class="fa-solid fa-square-arrow-up-right" style="color: rgb(6, 87, 236)"></i>Resume</p>
+         <a href="https://drive.google.com/file/d/10d7GbtyiNSnTinpSzQ-EjbLDBtSSGaFu/view?usp=sharing" target="_blank">
+          <i class="fa-solid fa-square-arrow-up-right" style="color: rgb(6, 87, 236)"></i>Resume
         </a>
     </div>
   </body>
