--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
         <a href="https://discordapp.com/users/516649677001719819" target="_blank">
           <i class="fa-brands fa-discord" style="color: rgb(6, 87, 236)"></i>@jnsougata
         </a>
-        <!-- <a href="https://drive.google.com/file/d/10d7GbtyiNSnTinpSzQ-EjbLDBtSSGaFu/view?usp=sharing" target="_blank">
+        <a href="/static/resume.pdf" target="_blank">
           <i class="fa-solid fa-square-arrow-up-right" style="color: rgb(6, 87, 236)"></i>Resume
-        </a> -->
+        </a>
     </div>
   </body>
 </html>
