Minor changes & bug fixes.

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         <a href="/static/resume.pdf" target="_blank">
           <i class="fa-solid fa-square-arrow-up-right" style="color: rgb(6, 87, 236)"></i>Resume
         </a>
+      </div>
     </div>
   </body>
 </html>
