--- a/index.html
+++ b/index.html
@@ -70,6 +70,24 @@
             position: relative;
         }
 
+        /* Mobile One-Sided Timeline */
+        @media (max-width: 768px) {
+            .timeline::after {
+                left: 5px;
+            }
+
+            .timeline-item {
+                padding-left: 40px !important;
+                padding-right: 0 !important;
+            }
+
+            .timeline-item:nth-child(odd) .timeline-icon,
+            .timeline-item:nth-child(even) .timeline-icon {
+                left: 5px !important;
+                right: auto !important;
+            }
+        }
+
         .timeline-item:nth-child(odd) {
             padding-right: calc(50% + 30px);
         }
@@ -132,7 +150,7 @@
 
         /* Radial Gradient Background */
         .radial-gradient {
-            background: radial-gradient(circle, rgba(63,94,251,0.3) 0%, rgba(252,70,107,0.3) 100%);
+            background: radial-gradient(circle, rgba(63, 94, 251, 0.3) 0%, rgba(252, 70, 107, 0.3) 100%);
         }
 
         /* Custom Gradients */
@@ -157,7 +175,7 @@
         }
 
         .banner-noise {
-            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100'%3E%3Cdefs%3E%3Cfilter id='noiseFilter' x='0%' y='0%' width='100%' height='100%' filterUnits='objectBoundingBox'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.9' numOctaves='2' stitchTiles='stitch'/%3E%3CfeColorMatrix type='saturate' values='0'/%3E%3C/filter%3E%3C/defs%3E%3Crect width='100%' height='100%' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100'%3E%3Cdefs%3E%3Cfilter id='noiseFilter' x='0%' y='0%' width='100%' height='100%' filterUnits='objectBoundingBox'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.9' numOctaves='2' stitchTiles='stitch'/%3E%3CfeColorMatrix type='saturate' values='0'/%3E%3C/filter%3E%3C/defs%3E%3Crect width='100%' height='100%' filter='url(%23noiseFilter)')/%3E%3C/svg%3E");
             /* Gaussian noise */
         }
 
@@ -170,10 +188,20 @@
 <body class="bg-gray-50 font-serif">
 
     <div class="banner shadow-md py-6 fixed top-0 w-full z-10">
-        <div class="container mx-auto px-4">
+        <div class="container mx-auto px-4 sm:px-6">
             <div class="flex justify-between items-center">
-                <a href="#" class="text-xl font-semibold text-gray-800 animated-underline">Sougata</a>
-                <nav>
+                <a href="#" class="text-xl font-semibold text-gray-800 animated-underline">Sougata.</a>
+
+                <!-- Mobile Menu Button -->
+                <button id="mobile-menu-button" class="lg:hidden text-gray-600 hover:text-gray-800 focus:outline-none">
+                    <svg id="menu-icon" class="h-6 w-6 fill-current" viewBox="0 0 24 24">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M3 6h18v2H3V6zm0 5h18v2H3v-2zm0 5h18v2H3v-2z" fill="currentColor" />
+                    </svg>
+                </button>
+
+                <!-- Navigation Menu -->
+                <nav class="hidden lg:block">
                     <ul class="flex space-x-4">
                         <li><a href="#about" class="text-gray-600 hover:text-gray-800 animated-underline">About</a></li>
                         <li><a href="#projects"
@@ -190,11 +218,31 @@
                     </ul>
                 </nav>
             </div>
+
+            <!-- Mobile Menu (Hidden by default) -->
+            <div id="mobile-menu"
+                class="hidden lg:hidden absolute top-full right-0 bg-white shadow-md rounded-md mt-2 py-2 w-48">
+                <ul class="flex flex-col">
+                    <li><a href="#about"
+                            class="block px-4 py-2 text-gray-800 hover:bg-gray-100 animated-underline">About</a></li>
+                    <li><a href="#projects"
+                            class="block px-4 py-2 text-gray-800 hover:bg-gray-100 animated-underline">Projects</a></li>
+                    <li><a href="#skills"
+                            class="block px-4 py-2 text-gray-800 hover:bg-gray-100 animated-underline">Skills</a></li>
+                    <li><a href="#timeline"
+                            class="block px-4 py-2 text-gray-800 hover:bg-gray-100 animated-underline">Timeline</a></li>
+                    <li><a href="#contact"
+                            class="block px-4 py-2 text-gray-800 hover:bg-gray-100 animated-underline">Contact</a></li>
+                    <li><a href="https://drive.google.com/file/d/1RS0pO5iGeaSDAdhXv5dua7GqpPmabaNn/view?usp=sharing"
+                            target="_blank"
+                            class="block px-4 py-2 text-gray-800 hover:bg-gray-100 animated-underline">Resume</a></li>
+                </ul>
+            </div>
         </div>
     </div>
 
     <section id="hero" class="py-24 mt-20 bg-gray-100">
-        <div class="container mx-auto px-4 text-center">
+        <div class="container mx-auto px-4 sm:px-6 text-center">
             <h1 class="text-4xl md:text-5xl font-bold text-gray-900 mb-4">Hello, I'm Sougata!</h1>
             <p class="text-lg text-gray-700 mb-8">BSc. in Physics (2019 - 2023) | MCA (2023 - 2025) MAKAUT</p>
             <a href="#projects"
@@ -204,7 +252,7 @@
     </section>
 
     <section id="about" class="py-16">
-        <div class="container mx-auto px-4 grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
+        <div class="container mx-auto px-4 sm:px-6 grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
             <div class="md:order-2 flex justify-center">
                 <img src="https://avatars.githubusercontent.com/u/53375272?v=4" alt="Your Image"
                     class="rounded-md shadow-md blend-image w-96 h-96 object-cover">
@@ -229,12 +277,13 @@
     </section>
 
     <section id="projects" class="py-16 bg-gray-50">
-        <div class="container mx-auto px-4">
+        <div class="container mx-auto px-4 sm:px-6">
             <h2 class="text-3xl font-semibold text-gray-800 mb-8 text-center">Projects</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
 
                 <div class="bg-white rounded-md shadow-sm overflow-hidden">
-                    <div class="h-48 gradient-1 flex items-center justify-center banner-noise shadow-md" style="color: #333;">
+                    <div class="h-48 gradient-1 flex items-center justify-center bg-cover banner-noise shadow-md"
+                        style="color: #333; background-image: url('data:image/svg+xml,%3Csvg xmlns=\'http://www.w3.org/2000/svg\' width=\'100\' height=\'100\'%3E%3Cdefs%3E%3Cfilter id=\'noiseFilter\'%3E%3CfeTurbulence type=\'fractalNoise\' baseFrequency=\'0.9\' numOctaves=\'2\' stitchTiles=\'stitch\'/%3E%3CfeColorMatrix type=\'saturate\' values=\'0\'/%3E%3C/filter%3E%3C/defs%3E%3Crect width=\'100%25\' height=\'100%25\' filter=\'url(%23noiseFilter)\'/%3E%3C/svg%3E')">
                         <i class="fab fa-python text-5xl"></i>
                     </div>
                     <div class="p-4">
@@ -247,7 +296,8 @@
                 </div>
 
                 <div class="bg-white rounded-md shadow-sm overflow-hidden">
-                    <div class="h-48 gradient-2 flex items-center justify-center banner-noise shadow-md" style="color: #333;">
+                    <div class="h-48 gradient-2 flex items-center justify-center bg-cover banner-noise shadow-md"
+                        style="color: #333; background-image: url('data:image/svg+xml,%3Csvg xmlns=\'http://www.w3.org/2000/svg\' width=\'100\' height=\'100\'%3E%3Cdefs%3E%3Cfilter id=\'noiseFilter\'%3E%3CfeTurbulence type=\'fractalNoise\' baseFrequency=\'0.9\' numOctaves=\'2\' stitchTiles=\'stitch\'/%3E%3CfeColorMatrix type=\'saturate\' values=\'0\'/%3E%3C/filter%3E%3C/defs%3E%3Crect width=\'100%25\' height=\'100%25\' filter=\'url(%23noiseFilter)\'/%3E%3C/svg%3E')">
                         <i class="fab fa-python text-5xl"></i>
                     </div>
                     <div class="p-4">
@@ -260,12 +310,14 @@
                 </div>
 
                 <div class="bg-white rounded-md shadow-sm overflow-hidden">
-                    <div class="h-48 gradient-3 flex items-center justify-center banner-noise shadow-md" style="color: #333;">
+                    <div class="h-48 gradient-3 flex items-center justify-center bg-cover banner-noise shadow-md"
+                        style="color: #333; background-image: url('data:image/svg+xml,%3Csvg xmlns=\'http://www.w3.org/2000/svg\' width=\'100\' height=\'100\'%3E%3Cdefs%3E%3Cfilter id=\'noiseFilter\'%3E%3CfeTurbulence type=\'fractalNoise\' baseFrequency=\'0.9\' numOctaves=\'2\' stitchTiles=\'stitch\'/%3E%3CfeColorMatrix type=\'saturate\' values=\'0\'/%3E%3C/filter%3E%3C/defs%3E%3Crect width=\'100%25\' height=\'100%25\' filter=\'url(%23noiseFilter)\'/%3E%3C/svg%3E')">
                         <i class="fab fa-aws text-5xl"></i>
                     </div>
                     <div class="p-4">
                         <h3 class="text-xl font-semibold text-gray-800 mb-2">Filebox</h3>
-                        <p class="text-gray-700 mb-4">A free and open-source Google Drive alternative built on AWS Lambda,
+                        <p class="text-gray-700 mb-4">A free and open-source Google Drive alternative built on AWS
+                            Lambda,
                             enabling secure and scalable file storage and sharing.</p>
                         <a href="https://github.com/jnsougata/filebox" target="_blank"
                             class="text-gray-600 hover:text-gray-800 animated-underline">View Project</a>
@@ -276,7 +328,7 @@
     </section>
 
     <section id="skills" class="py-16 mt-8 mb-8">
-        <div class="container mx-auto px-4">
+        <div class="container mx-auto px-4 sm:px-6">
             <h2 class="text-3xl font-semibold text-gray-800 mb-8 text-center">Skills</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
 
@@ -393,7 +445,7 @@
     </section>
 
     <section id="timeline" class="py-16 bg-gray-50">
-        <div class="container mx-auto px-4">
+        <div class="container mx-auto px-4 sm:px-6">
             <h2 class="text-3xl font-semibold text-gray-800 mb-8 text-center">My Journey</h2>
             <div class="timeline">
 
@@ -442,7 +494,7 @@
 
 
     <section id="contact" class="py-16 bg-gray-100">
-        <div class="container mx-auto px-4">
+        <div class="container mx-auto px-4 sm:px-6">
             <h2 class="text-3xl font-semibold text-gray-800 mb-8 text-center">Contact Me</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                 <div>
@@ -510,6 +562,19 @@
 
             window.addEventListener('scroll', checkTimelineVisibility);
             checkTimelineVisibility(); // Initial check
+
+            // Mobile menu
+            const mobileMenuButton = document.getElementById('mobile-menu-button');
+            const mobileMenu = document.getElementById('mobile-menu');
+            const menuIcon = document.getElementById('menu-icon');
+
+            mobileMenuButton.addEventListener('click', () => {
+                mobileMenu.classList.toggle('hidden');
+                // Toggle Menu Icon
+                menuIcon.innerHTML = mobileMenu.classList.contains('hidden') ?
+                    '<path fill-rule="evenodd" clip-rule="evenodd" d="M3 6h18v2H3V6zm0 5h18v2H3v-2zm0 5h18v2H3v-2z" fill="currentColor"/>' :
+                    '<path fill-rule="evenodd" clip-rule="evenodd" d="M18.278 16.864a1 1 0 0 1-1.414 1.414l-4.829-4.828-4.828 4.828a1 1 0 0 1-1.414-1.414l4.828-4.829-4.828-4.828a1 1 0 0 1 1.414-1.414l4.829 4.828 4.828-4.828a1 1 0 1 1 1.414 1.414l-4.828 4.829 4.828 4.828z" fill="currentColor"/>';
+            });
         });
     </script>
 
