--- a/index.html
+++ b/index.html
@@ -42,12 +42,6 @@
             mix-blend-mode: multiply;
         }
 
-        #three-container {
-            width: 100%;
-            height: 400px;
-            /* Adjust as needed */
-        }
-
         /* Timeline Styles */
         .timeline {
             position: relative;
@@ -143,16 +137,6 @@
             transition: opacity 0.5s ease-out, transform 0.5s ease-out;
         }
 
-        .timeline-item.active {
-            opacity: 1;
-            transform: translateY(0);
-        }
-
-        /* Radial Gradient Background */
-        .radial-gradient {
-            background: radial-gradient(circle, rgba(63, 94, 251, 0.3) 0%, rgba(252, 70, 107, 0.3) 100%);
-        }
-
         /* Custom Gradients */
         .gradient-1 {
             background: linear-gradient(45deg, #e91e63, #9c27b0);
@@ -177,10 +161,6 @@
         .banner-noise {
             background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100'%3E%3Cdefs%3E%3Cfilter id='noiseFilter' x='0%' y='0%' width='100%' height='100%' filterUnits='objectBoundingBox'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.9' numOctaves='2' stitchTiles='stitch'/%3E%3CfeColorMatrix type='saturate' values='0'/%3E%3C/filter%3E%3C/defs%3E%3Crect width='100%' height='100%' filter='url(%23noiseFilter)')/%3E%3C/svg%3E");
             /* Gaussian noise */
-        }
-
-        .white-icon {
-            color: white;
         }
     </style>
 </head>
@@ -261,7 +241,7 @@
                 <h2 class="text-3xl font-semibold text-gray-800 mb-4 text-center md:text-left">About Me</h2>
                 <p class="text-gray-700 mb-4">
                     I am currently pursuing MCA (2023 - 2025) from Maulana Abul Kalam Azad University of Technology,
-                    W.B, with a BSc. in Physics (2019 - 2023). I have a strong analytical and problem-solving skills,
+                    W.B, with a B.Sc. in Physics (2019 - 2023). I have a strong analytical and problem-solving skills,
                     which I am eager to apply in different fields.
                 </p>
                 <p class="text-gray-700 mb-4">
@@ -474,7 +454,7 @@
                     <div class="timeline-content">
                         <div class="timeline-date">2023 - 2025</div>
                         <div class="timeline-title">MCA at MAKAUT</div>
-                        <p class="text-gray-700">Currently pursuing Master of Computer Applications at Maulana Abul
+                        <p class="text-gray-700">Currently, pursuing Master of Computer Applications at Maulana Abul
                             Kalam Azad University of Technology, W.B.</p>
                     </div>
                 </div>
