--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
         background-color: black;
         color: white;
       }
+      @font-face {
+        font-family: 'Claude';
+        src: url('claude.woff2') format('woff2');
+      }
+      body {
+        font-family: 'Claude', sans-serif;
+      }
     </style>
   </head>
   <body class="min-h-screen flex flex-col items-center justify-center p-6 space-y-8">
