--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <img src="https://avatars.githubusercontent.com/u/53375272?v=4" alt="Sougata Jana" class="w-32 h-32 rounded-full border-2 border-black" />
     <h1 class="text-3xl font-bold tracking-tight">Hey there, I’m Sougata 👋</h1>
-    <p class="text-sm text-gray-600 text-center max-w-md">PhD @ <a href="https://nitdgp.ac.in/" class="underline">NITD</a> · Maker of weirdly useful things · Based in Kolkata, India</p>
+    <p class="text-sm text-gray-600 text-center max-w-md">PhD @ <a href="https://nitdgp.ac.in/" class="underline">NITDGP</a> · Maker of weirdly useful things · Based in Kolkata, India</p>
 
     
     <div class="text-center max-w-xl text-sm space-y-3">
