--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <ul class="text-sm space-y-2 list-disc list-inside">
         <li><strong>Quantum Chaos</strong>: Because pseudo-random is for simulations. I want the real weird.</li>
         <li><strong>Probabilistic Systems</strong>: Nothing screams "confidence" like a model that only probably works.</li>
-        <li><strong>Real AI (not the LLM hype)</strong>: If it can't learn and forget, is it even intelligent, bro?</li>
+        <li><strong>Real AI (not the LLM hype)</strong>: If it can't learn and forget, is it even intelligent?</li>
         <li><strong>Knowledge Graphs</strong>: Graphs that even machines can understand. Sometimes..</li>
       </ul>
     </div>
